# llmstatemachine

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.html
examples/: maze_game.py  memory_game.py
examples/html_agent/: html_agent.py  html_extractor.py  html_extractor_test.py
src/llmstatemachine/: __init__.py  function.py  workflow_agent.py
