[tool.poetry]
name = "llmstatemachine"
version = "0.3.0"
description = ""
authors = ["Mikko Korpela <mikko@robocorp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
openai = "^1.3.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
