[tool.poetry]
name = "llmstatemachine"
version = "0.6.0"
description = "A Python library for building GPT-powered agents with state machine logic and chat history memory."
authors = ["Mikko Korpela <mikko@robocorp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
python-dotenv = "^1.0.0"
mazelib = "^0.9.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
